# email-triage-final3

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py  main.py
