[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-final3"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
        "uvicorn",
            "requests",
                "openenv-core>=0.2.0"
                ]

                [project.scripts]
                server = "server.app:main"
                
